# rtrl-snap-reproduction

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: copy_bptt.yaml  copy_rtrl.yaml  copy_snap1.yaml
scripts/: plot_results.py  run_smoke_tests.py  train_copy.py
src/rtrl_snap/algorithms/: bptt.py  rtrl.py  snap.py
src/rtrl_snap/evaluation/: plotting.py
src/rtrl_snap/models/: readout.py  vanilla_rnn.py
src/rtrl_snap/tasks/: copy_task.py
src/rtrl_snap/training/: losses.py
src/rtrl_snap/utils/: config.py
tests/: test_copy_task.py  test_losses.py  test_rtrl_matches_bptt.py  test_snap_mask.py  test_vanilla_rnn_shapes.py
